--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="pt-br"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Melhor Hack do Mines Bet 7K</title>
+<title>Melhor Hack do Mines Bet 7K - HSE</title>
 <link rel="stylesheet" href="css/styles.css">
 <link rel="shortcut icon" href="/images/Favicon.png" type="image/favicon" />
 </head>
